--- a/dns/src/github.com/johnstarich/go/dns/init/init.go.html
+++ b/dns/src/github.com/johnstarich/go/dns/init/init.go.html
@@ -63,7 +63,7 @@
 <span id="L6" class="ln">     6  </span>	&#34;github.com/johnstarich/go/dns&#34;
 <span id="L7" class="ln">     7  </span>)
 <span id="L8" class="ln">     8  </span>
-<span id="L9" class="ln">     9  </span>func init() {
+<span id="L9" class="ln">     9  </span>func init() { <span class="comment">// nolint:gochecknoinits // This package&#39;s purpose is an implicit init().</span>
 <span id="L10" class="ln">    10  </span>	net.DefaultResolver = dns.New()
 <span id="L11" class="ln">    11  </span>}
 <span id="L12" class="ln">    12  </span>
