--- a/dns/src/github.com/johnstarich/go/dns/resolver_test.go.html
+++ b/dns/src/github.com/johnstarich/go/dns/resolver_test.go.html
@@ -73,7 +73,7 @@
 <span id="L16" class="ln">    16  </span>	&#34;go.uber.org/zap/zaptest&#34;
 <span id="L17" class="ln">    17  </span>)
 <span id="L18" class="ln">    18  </span>
-<span id="L19" class="ln">    19  </span>var testTimeout = 5 * time.Second
+<span id="L19" class="ln">    19  </span>const testTimeout = 5 * time.Second
 <span id="L20" class="ln">    20  </span>
 <span id="L21" class="ln">    21  </span>func TestNew(t *testing.T) {
 <span id="L22" class="ln">    22  </span>	assert.NotNil(t, New())
@@ -99,7 +99,7 @@
 <span id="L42" class="ln">    42  </span>
 <span id="L43" class="ln">    43  </span>func TestNewMacOSDialer(t *testing.T) {
 <span id="L44" class="ln">    44  </span>	t.Run(&#34;fill in defaults&#34;, func(t *testing.T) {
-<span id="L45" class="ln">    45  </span>		dialer := newMacOSDialer(Config{}).(*macOSDialer)
+<span id="L45" class="ln">    45  </span>		dialer := newMacOSDialer(Config{})
 <span id="L46" class="ln">    46  </span>		assert.Equal(t, zap.NewNop(), dialer.Config.Logger)
 <span id="L47" class="ln">    47  </span>		assert.Equal(t, 150*time.Millisecond, dialer.Config.InitialNameserverDelay)
 <span id="L48" class="ln">    48  </span>		assert.Equal(t, 10*time.Millisecond, dialer.Config.NextNameserverInterval)
@@ -113,7 +113,7 @@
 <span id="L56" class="ln">    56  </span>			Logger:                 someLogger,
 <span id="L57" class="ln">    57  </span>			InitialNameserverDelay: someDuration,
 <span id="L58" class="ln">    58  </span>			NextNameserverInterval: someDuration,
-<span id="L59" class="ln">    59  </span>		}).(*macOSDialer)
+<span id="L59" class="ln">    59  </span>		})
 <span id="L60" class="ln">    60  </span>
 <span id="L61" class="ln">    61  </span>		assert.Equal(t, someLogger, dialer.Config.Logger)
 <span id="L62" class="ln">    62  </span>		assert.Equal(t, someDuration, dialer.Config.InitialNameserverDelay)
@@ -132,7 +132,7 @@
 <span id="L75" class="ln">    75  </span>		},
 <span id="L76" class="ln">    76  </span>	}
 <span id="L77" class="ln">    77  </span>	someError := errors.New(&#34;some error&#34;)
-<span id="L78" class="ln">    78  </span>	dialer := newMacOSDialer(Config{}).(*macOSDialer)
+<span id="L78" class="ln">    78  </span>	dialer := newMacOSDialer(Config{})
 <span id="L79" class="ln">    79  </span>	callCount := 0
 <span id="L80" class="ln">    80  </span>	dialer.readResolvers = func(ctx context.Context) (scutil.Config, error) {
 <span id="L81" class="ln">    81  </span>		callCount++
@@ -154,7 +154,7 @@
 <span id="L97" class="ln">    97  </span>}
 <span id="L98" class="ln">    98  </span>
 <span id="L99" class="ln">    99  </span>func testDialer(t *testing.T) *macOSDialer {
-<span id="L100" class="ln">   100  </span>	return newMacOSDialer(Config{Logger: zaptest.NewLogger(t)}).(*macOSDialer)
+<span id="L100" class="ln">   100  </span>	return newMacOSDialer(Config{Logger: zaptest.NewLogger(t)})
 <span id="L101" class="ln">   101  </span>}
 <span id="L102" class="ln">   102  </span>
 <span id="L103" class="ln">   103  </span>func TestDNSLookupHost(t *testing.T) {
@@ -215,7 +215,7 @@
 <span id="L158" class="ln">   158  </span>			workingDNS, cancel := testhelpers.StartDNSServer(t, testhelpers.DNSConfig{
 <span id="L159" class="ln">   159  </span>				ResponseDelay: 1 * time.Second,
 <span id="L160" class="ln">   160  </span>				Hostnames: map[string][]string{
-<span id="L161" class="ln">   161  </span>					&#34;hi.local.&#34;: []string{&#34;5.6.7.8&#34;},
+<span id="L161" class="ln">   161  </span>					&#34;hi.local.&#34;: {&#34;5.6.7.8&#34;},
 <span id="L162" class="ln">   162  </span>				},
 <span id="L163" class="ln">   163  </span>			})
 <span id="L164" class="ln">   164  </span>			defer cancel()
@@ -235,7 +235,7 @@
 <span id="L178" class="ln">   178  </span>
 <span id="L179" class="ln">   179  </span>			conn, err := dialer.DialContext(ctx, &#34;ignored&#34;, &#34;ignored&#34;)
 <span id="L180" class="ln">   180  </span>			require.NoError(t, err)
-<span id="L181" class="ln">   181  </span>			assert.Implements(t, (*staggercast.Conn)(nil), conn)
+<span id="L181" class="ln">   181  </span>			assert.IsType(t, (*staggercast.Conn)(nil), conn)
 <span id="L182" class="ln">   182  </span>			conn.Close()
 <span id="L183" class="ln">   183  </span>
 <span id="L184" class="ln">   184  </span>			res := &amp;net.Resolver{PreferGo: true, Dial: dialer.DialContext}
@@ -257,7 +257,7 @@
 <span id="L200" class="ln">   200  </span>	workingDNS, cancel := testhelpers.StartDNSServer(t, testhelpers.DNSConfig{
 <span id="L201" class="ln">   201  </span>		ResponseDelay: 1 * time.Second,
 <span id="L202" class="ln">   202  </span>		Hostnames: map[string][]string{
-<span id="L203" class="ln">   203  </span>			&#34;hi.local.&#34;: []string{&#34;5.6.7.8&#34;},
+<span id="L203" class="ln">   203  </span>			&#34;hi.local.&#34;: {&#34;5.6.7.8&#34;},
 <span id="L204" class="ln">   204  </span>		},
 <span id="L205" class="ln">   205  </span>		Network: &#34;udp6&#34;,
 <span id="L206" class="ln">   206  </span>	})
@@ -271,7 +271,7 @@
 <span id="L214" class="ln">   214  </span>
 <span id="L215" class="ln">   215  </span>	conn, err := dialer.DialContext(ctx, &#34;ignored&#34;, &#34;ignored&#34;)
 <span id="L216" class="ln">   216  </span>	require.NoError(t, err)
-<span id="L217" class="ln">   217  </span>	assert.Implements(t, (*staggercast.Conn)(nil), conn)
+<span id="L217" class="ln">   217  </span>	assert.IsType(t, (*staggercast.Conn)(nil), conn)
 <span id="L218" class="ln">   218  </span>	conn.Close()
 <span id="L219" class="ln">   219  </span>
 <span id="L220" class="ln">   220  </span>	res := &amp;net.Resolver{PreferGo: true, Dial: dialer.DialContext}
@@ -285,7 +285,7 @@
 <span id="L228" class="ln">   228  </span>	t.Parallel()
 <span id="L229" class="ln">   229  </span>	addr, cancel := testhelpers.StartDNSServer(t, testhelpers.DNSConfig{
 <span id="L230" class="ln">   230  </span>		Hostnames: map[string][]string{
-<span id="L231" class="ln">   231  </span>			&#34;hi.local.&#34;: []string{&#34;5.6.7.8&#34;},
+<span id="L231" class="ln">   231  </span>			&#34;hi.local.&#34;: {&#34;5.6.7.8&#34;},
 <span id="L232" class="ln">   232  </span>		},
 <span id="L233" class="ln">   233  </span>	})
 <span id="L234" class="ln">   234  </span>	defer cancel()
@@ -294,7 +294,7 @@
 <span id="L237" class="ln">   237  </span>	dialer := newMacOSDialer(Config{
 <span id="L238" class="ln">   238  </span>		InitialNameserverDelay: initialDelay,
 <span id="L239" class="ln">   239  </span>		Logger:                 zaptest.NewLogger(t),
-<span id="L240" class="ln">   240  </span>	}).(*macOSDialer)
+<span id="L240" class="ln">   240  </span>	})
 <span id="L241" class="ln">   241  </span>	dialer.nameservers = []string{&#34;1.2.3.4:53&#34;, addr}
 <span id="L242" class="ln">   242  </span>	res := &amp;net.Resolver{PreferGo: true, Dial: dialer.DialContext}
 <span id="L243" class="ln">   243  </span>	ctx, cancel := context.WithTimeout(context.Background(), testTimeout)
