--- a/dns/src/github.com/johnstarich/go/dns/scutil/config.go.html
+++ b/dns/src/github.com/johnstarich/go/dns/scutil/config.go.html
@@ -120,79 +120,90 @@
 <span id="L63" class="ln">    63  </span>		}
 <span id="L64" class="ln">    64  </span>
 <span id="L65" class="ln">    65  </span>		currentResolver := &amp;config.Resolvers[len(config.Resolvers)-1]
-<span id="L66" class="ln">    66  </span>		switch {
-<span id="L67" class="ln">    67  </span>		case strings.Contains(key, &#34;search domain&#34;):
-<span id="L68" class="ln">    68  </span>			currentResolver.SearchDomain = append(currentResolver.SearchDomain, value)
-<span id="L69" class="ln">    69  </span>		case strings.Contains(key, &#34;domain&#34;):
-<span id="L70" class="ln">    70  </span>			currentResolver.Domain = value
-<span id="L71" class="ln">    71  </span>		case strings.Contains(key, &#34;flags&#34;):
-<span id="L72" class="ln">    72  </span>			for _, flag := range strings.Split(value, &#34;,&#34;) {
-<span id="L73" class="ln">    73  </span>				currentResolver.Flags = append(currentResolver.Flags, Flag(strings.TrimSpace(flag)))
-<span id="L74" class="ln">    74  </span>			}
-<span id="L75" class="ln">    75  </span>		case strings.Contains(key, &#34;if_index&#34;):
-<span id="L76" class="ln">    76  </span>			tokens := strings.SplitN(value, &#34; &#34;, 2)
-<span id="L77" class="ln">    77  </span>			if len(tokens) == 2 {
-<span id="L78" class="ln">    78  </span>				currentResolver.InterfaceName = strings.Trim(tokens[1], &#34;()&#34;)
-<span id="L79" class="ln">    79  </span>			}
-<span id="L80" class="ln">    80  </span>
-<span id="L81" class="ln">    81  </span>			i, err := strconv.ParseInt(tokens[0], 10, 64)
-<span id="L82" class="ln">    82  </span>			if err == nil {
-<span id="L83" class="ln">    83  </span>				currentResolver.InterfaceIndex = int(i)
-<span id="L84" class="ln">    84  </span>			}
-<span id="L85" class="ln">    85  </span>		case strings.Contains(key, &#34;options&#34;):
-<span id="L86" class="ln">    86  </span>			currentResolver.MulticastDNS = strings.Contains(value, &#34;mdns&#34;)
-<span id="L87" class="ln">    87  </span>		case strings.Contains(key, &#34;port&#34;):
-<span id="L88" class="ln">    88  </span>			i, err := strconv.ParseInt(value, 10, 64)
-<span id="L89" class="ln">    89  </span>			if err == nil {
-<span id="L90" class="ln">    90  </span>				currentResolver.Port = int(i)
-<span id="L91" class="ln">    91  </span>			}
-<span id="L92" class="ln">    92  </span>		case strings.Contains(key, &#34;nameserver&#34;):
-<span id="L93" class="ln">    93  </span>			currentResolver.Nameservers = append(currentResolver.Nameservers, value)
-<span id="L94" class="ln">    94  </span>		case strings.Contains(key, &#34;order&#34;):
-<span id="L95" class="ln">    95  </span>			i, err := strconv.ParseInt(value, 10, 64)
-<span id="L96" class="ln">    96  </span>			if err == nil {
-<span id="L97" class="ln">    97  </span>				currentResolver.Order = int(i)
-<span id="L98" class="ln">    98  </span>			}
-<span id="L99" class="ln">    99  </span>		case strings.Contains(key, &#34;reach&#34;):
-<span id="L100" class="ln">   100  </span>			tokens := strings.SplitN(value, &#34; &#34;, 2)
-<span id="L101" class="ln">   101  </span>			if len(tokens) == 2 {
-<span id="L102" class="ln">   102  </span>				reach := strings.Trim(tokens[1], &#34;()&#34;)
-<span id="L103" class="ln">   103  </span>				for _, statusStr := range strings.Split(reach, &#34;,&#34;) {
-<span id="L104" class="ln">   104  </span>					status := Reach(statusStr)
-<span id="L105" class="ln">   105  </span>					if status == Reachable {
-<span id="L106" class="ln">   106  </span>						currentResolver.reachable = true
-<span id="L107" class="ln">   107  </span>					}
-<span id="L108" class="ln">   108  </span>					currentResolver.Reach = append(currentResolver.Reach, status)
-<span id="L109" class="ln">   109  </span>				}
-<span id="L110" class="ln">   110  </span>			}
-<span id="L111" class="ln">   111  </span>		case strings.Contains(key, &#34;timeout&#34;):
-<span id="L112" class="ln">   112  </span>			i, err := strconv.ParseInt(value, 10, 64)
-<span id="L113" class="ln">   113  </span>			if err == nil {
-<span id="L114" class="ln">   114  </span>				currentResolver.Timeout = time.Duration(i) * time.Second
-<span id="L115" class="ln">   115  </span>			}
-<span id="L116" class="ln">   116  </span>		}
-<span id="L117" class="ln">   117  </span>	}
-<span id="L118" class="ln">   118  </span>
-<span id="L119" class="ln">   119  </span>	return config, nil
-<span id="L120" class="ln">   120  </span>}
-<span id="L121" class="ln">   121  </span>
-<span id="L122" class="ln">   122  </span>func splitKeyValue(line string) (key, value string) {
-<span id="L123" class="ln">   123  </span>	tokens := strings.SplitN(line, &#34;:&#34;, 2)
-<span id="L124" class="ln">   124  </span>	switch len(tokens) {
-<span id="L125" class="ln">   125  </span>	case 1:
-<span id="L126" class="ln">   126  </span>		return strings.TrimSpace(tokens[0]), &#34;&#34;
-<span id="L127" class="ln">   127  </span>	default:
-<span id="L128" class="ln">   128  </span>		return strings.TrimSpace(tokens[0]), strings.TrimSpace(tokens[1])
+<span id="L66" class="ln">    66  </span>		parseAndApplyResolverKey(currentResolver, key, value)
+<span id="L67" class="ln">    67  </span>	}
+<span id="L68" class="ln">    68  </span>
+<span id="L69" class="ln">    69  </span>	return config, nil
+<span id="L70" class="ln">    70  </span>}
+<span id="L71" class="ln">    71  </span>
+<span id="L72" class="ln">    72  </span>func parseAndApplyResolverKey(r *Resolver, key, value string) {
+<span id="L73" class="ln">    73  </span>	const (
+<span id="L74" class="ln">    74  </span>		decimalBase = 10
+<span id="L75" class="ln">    75  </span>		maxIntBits  = 64
+<span id="L76" class="ln">    76  </span>	)
+<span id="L77" class="ln">    77  </span>	switch {
+<span id="L78" class="ln">    78  </span>	case strings.Contains(key, &#34;search domain&#34;):
+<span id="L79" class="ln">    79  </span>		r.SearchDomain = append(r.SearchDomain, value)
+<span id="L80" class="ln">    80  </span>	case strings.Contains(key, &#34;domain&#34;):
+<span id="L81" class="ln">    81  </span>		r.Domain = value
+<span id="L82" class="ln">    82  </span>	case strings.Contains(key, &#34;flags&#34;):
+<span id="L83" class="ln">    83  </span>		for _, flag := range strings.Split(value, &#34;,&#34;) {
+<span id="L84" class="ln">    84  </span>			r.Flags = append(r.Flags, Flag(strings.TrimSpace(flag)))
+<span id="L85" class="ln">    85  </span>		}
+<span id="L86" class="ln">    86  </span>	case strings.Contains(key, &#34;if_index&#34;):
+<span id="L87" class="ln">    87  </span>		const ifIndexTokenCount = 2
+<span id="L88" class="ln">    88  </span>		tokens := strings.SplitN(value, &#34; &#34;, ifIndexTokenCount)
+<span id="L89" class="ln">    89  </span>		if len(tokens) == ifIndexTokenCount {
+<span id="L90" class="ln">    90  </span>			r.InterfaceName = strings.Trim(tokens[1], &#34;()&#34;)
+<span id="L91" class="ln">    91  </span>		}
+<span id="L92" class="ln">    92  </span>
+<span id="L93" class="ln">    93  </span>		i, err := strconv.ParseInt(tokens[0], decimalBase, maxIntBits)
+<span id="L94" class="ln">    94  </span>		if err == nil {
+<span id="L95" class="ln">    95  </span>			r.InterfaceIndex = int(i)
+<span id="L96" class="ln">    96  </span>		}
+<span id="L97" class="ln">    97  </span>	case strings.Contains(key, &#34;options&#34;):
+<span id="L98" class="ln">    98  </span>		r.MulticastDNS = strings.Contains(value, &#34;mdns&#34;)
+<span id="L99" class="ln">    99  </span>	case strings.Contains(key, &#34;port&#34;):
+<span id="L100" class="ln">   100  </span>		i, err := strconv.ParseInt(value, decimalBase, maxIntBits)
+<span id="L101" class="ln">   101  </span>		if err == nil {
+<span id="L102" class="ln">   102  </span>			r.Port = int(i)
+<span id="L103" class="ln">   103  </span>		}
+<span id="L104" class="ln">   104  </span>	case strings.Contains(key, &#34;nameserver&#34;):
+<span id="L105" class="ln">   105  </span>		r.Nameservers = append(r.Nameservers, value)
+<span id="L106" class="ln">   106  </span>	case strings.Contains(key, &#34;order&#34;):
+<span id="L107" class="ln">   107  </span>		i, err := strconv.ParseInt(value, decimalBase, maxIntBits)
+<span id="L108" class="ln">   108  </span>		if err == nil {
+<span id="L109" class="ln">   109  </span>			r.Order = int(i)
+<span id="L110" class="ln">   110  </span>		}
+<span id="L111" class="ln">   111  </span>	case strings.Contains(key, &#34;reach&#34;):
+<span id="L112" class="ln">   112  </span>		const reachTokenCount = 2
+<span id="L113" class="ln">   113  </span>		tokens := strings.SplitN(value, &#34; &#34;, reachTokenCount)
+<span id="L114" class="ln">   114  </span>		if len(tokens) == reachTokenCount {
+<span id="L115" class="ln">   115  </span>			reach := strings.Trim(tokens[1], &#34;()&#34;)
+<span id="L116" class="ln">   116  </span>			for _, statusStr := range strings.Split(reach, &#34;,&#34;) {
+<span id="L117" class="ln">   117  </span>				status := Reach(statusStr)
+<span id="L118" class="ln">   118  </span>				if status == Reachable {
+<span id="L119" class="ln">   119  </span>					r.reachable = true
+<span id="L120" class="ln">   120  </span>				}
+<span id="L121" class="ln">   121  </span>				r.Reach = append(r.Reach, status)
+<span id="L122" class="ln">   122  </span>			}
+<span id="L123" class="ln">   123  </span>		}
+<span id="L124" class="ln">   124  </span>	case strings.Contains(key, &#34;timeout&#34;):
+<span id="L125" class="ln">   125  </span>		i, err := strconv.ParseInt(value, decimalBase, maxIntBits)
+<span id="L126" class="ln">   126  </span>		if err == nil {
+<span id="L127" class="ln">   127  </span>			r.Timeout = time.Duration(i) * time.Second
+<span id="L128" class="ln">   128  </span>		}
 <span id="L129" class="ln">   129  </span>	}
 <span id="L130" class="ln">   130  </span>}
 <span id="L131" class="ln">   131  </span>
-<span id="L132" class="ln">   132  </span><span class="comment">// Reachable returns whether this resolver is reachable.</span>
-<span id="L133" class="ln">   133  </span><span class="comment">//</span>
-<span id="L134" class="ln">   134  </span><span class="comment">// scutil defines it as: The specified nodename/address can be reached using the current network configuration.</span>
-<span id="L135" class="ln">   135  </span>func (r Resolver) Reachable() bool {
-<span id="L136" class="ln">   136  </span>	return r.reachable
-<span id="L137" class="ln">   137  </span>}
-<span id="L138" class="ln">   138  </span>
+<span id="L132" class="ln">   132  </span>func splitKeyValue(line string) (key, value string) {
+<span id="L133" class="ln">   133  </span>	const keyValueSplits = 2
+<span id="L134" class="ln">   134  </span>	tokens := strings.SplitN(line, &#34;:&#34;, keyValueSplits)
+<span id="L135" class="ln">   135  </span>	switch len(tokens) {
+<span id="L136" class="ln">   136  </span>	case 1:
+<span id="L137" class="ln">   137  </span>		return strings.TrimSpace(tokens[0]), &#34;&#34;
+<span id="L138" class="ln">   138  </span>	default:
+<span id="L139" class="ln">   139  </span>		return strings.TrimSpace(tokens[0]), strings.TrimSpace(tokens[1])
+<span id="L140" class="ln">   140  </span>	}
+<span id="L141" class="ln">   141  </span>}
+<span id="L142" class="ln">   142  </span>
+<span id="L143" class="ln">   143  </span><span class="comment">// Reachable returns whether this resolver is reachable.</span>
+<span id="L144" class="ln">   144  </span><span class="comment">//</span>
+<span id="L145" class="ln">   145  </span><span class="comment">// scutil defines it as: The specified nodename/address can be reached using the current network configuration.</span>
+<span id="L146" class="ln">   146  </span>func (r Resolver) Reachable() bool {
+<span id="L147" class="ln">   147  </span>	return r.reachable
+<span id="L148" class="ln">   148  </span>}
+<span id="L149" class="ln">   149  </span>
 </pre><p></p>
 
 <div id="footer">
