--- a/dns/src/github.com/johnstarich/go/dns/testhelpers/dns.go.html
+++ b/dns/src/github.com/johnstarich/go/dns/testhelpers/dns.go.html
@@ -82,76 +82,79 @@
 <span id="L25" class="ln">    25  </span>		var message dns.Msg
 <span id="L26" class="ln">    26  </span>		message.SetReply(r)
 <span id="L27" class="ln">    27  </span>
-<span id="L28" class="ln">    28  </span>		switch r.Question[0].Qtype {
-<span id="L29" class="ln">    29  </span>		case dns.TypeA:
-<span id="L30" class="ln">    30  </span>			hostname := r.Question[0].Name
-<span id="L31" class="ln">    31  </span>			for _, ip := range hostnames[hostname] {
-<span id="L32" class="ln">    32  </span>				message.Answer = append(message.Answer, &amp;dns.A{
-<span id="L33" class="ln">    33  </span>					Hdr: dns.RR_Header{Name: dom, Rrtype: dns.TypeA, Class: dns.ClassINET, Ttl: 0},
-<span id="L34" class="ln">    34  </span>					A:   net.ParseIP(ip).To4(),
-<span id="L35" class="ln">    35  </span>				})
-<span id="L36" class="ln">    36  </span>			}
-<span id="L37" class="ln">    37  </span>		}
-<span id="L38" class="ln">    38  </span>
-<span id="L39" class="ln">    39  </span>		t.Logf(&#34;DNS message:\n%s&#34;, message.String())
-<span id="L40" class="ln">    40  </span>		err := w.WriteMsg(&amp;message)
-<span id="L41" class="ln">    41  </span>		if err != nil {
-<span id="L42" class="ln">    42  </span>			t.Logf(&#34;Error writing message: %s&#34;, err.Error())
-<span id="L43" class="ln">    43  </span>		}
-<span id="L44" class="ln">    44  </span>	}
-<span id="L45" class="ln">    45  </span>}
-<span id="L46" class="ln">    46  </span>
-<span id="L47" class="ln">    47  </span><span class="comment">// DNSConfig contains options to configure a test DNS server from StartDNSServer()</span>
-<span id="L48" class="ln">    48  </span>type DNSConfig struct {
-<span id="L49" class="ln">    49  </span>	ResponseDelay time.Duration
-<span id="L50" class="ln">    50  </span>	Hostnames     map[string][]string
-<span id="L51" class="ln">    51  </span>	Port          int
-<span id="L52" class="ln">    52  </span>	Network       string <span class="comment">// e.g. udp4, udp6</span>
-<span id="L53" class="ln">    53  </span>}
-<span id="L54" class="ln">    54  </span>
-<span id="L55" class="ln">    55  </span><span class="comment">// StartDNSServer starts a DNS server with the given configuration</span>
-<span id="L56" class="ln">    56  </span>func StartDNSServer(t *testing.T, config DNSConfig) (address string, cancel context.CancelFunc) {
-<span id="L57" class="ln">    57  </span>	t.Helper()
-<span id="L58" class="ln">    58  </span>	if config.Network == &#34;&#34; {
-<span id="L59" class="ln">    59  </span>		config.Network = &#34;udp4&#34;
-<span id="L60" class="ln">    60  </span>	}
-<span id="L61" class="ln">    61  </span>	switch config.Network {
-<span id="L62" class="ln">    62  </span>	case &#34;udp4&#34;, &#34;udp6&#34;:
-<span id="L63" class="ln">    63  </span>	default:
-<span id="L64" class="ln">    64  </span>		t.Fatal(&#34;Unsupported network for DNS:&#34;, config.Network)
-<span id="L65" class="ln">    65  </span>	}
-<span id="L66" class="ln">    66  </span>
-<span id="L67" class="ln">    67  </span>	ctx, cancel := context.WithCancel(context.Background())
-<span id="L68" class="ln">    68  </span>	mux := dns.NewServeMux()
-<span id="L69" class="ln">    69  </span>	mux.HandleFunc(&#34;local.&#34;, hostnamesHandler(ctx, t, config.ResponseDelay, config.Hostnames))
-<span id="L70" class="ln">    70  </span>
-<span id="L71" class="ln">    71  </span>	packetConn, err := net.ListenUDP(config.Network, &amp;net.UDPAddr{Port: config.Port})
-<span id="L72" class="ln">    72  </span>	require.NoError(t, err)
-<span id="L73" class="ln">    73  </span>	server := &amp;dns.Server{
-<span id="L74" class="ln">    74  </span>		Net:        config.Network,
-<span id="L75" class="ln">    75  </span>		PacketConn: packetConn,
-<span id="L76" class="ln">    76  </span>		Handler:    mux,
-<span id="L77" class="ln">    77  </span>	}
-<span id="L78" class="ln">    78  </span>	go func() {
-<span id="L79" class="ln">    79  </span>		err := server.ActivateAndServe()
-<span id="L80" class="ln">    80  </span>		require.NoError(t, err)
-<span id="L81" class="ln">    81  </span>	}()
-<span id="L82" class="ln">    82  </span>	go func() {
-<span id="L83" class="ln">    83  </span>		&lt;-ctx.Done()
-<span id="L84" class="ln">    84  </span>		_ = server.Shutdown()
-<span id="L85" class="ln">    85  </span>	}()
-<span id="L86" class="ln">    86  </span>	localAddr := server.PacketConn.LocalAddr().String()
-<span id="L87" class="ln">    87  </span>	_, port, err := net.SplitHostPort(localAddr)
-<span id="L88" class="ln">    88  </span>	require.NoError(t, err)
-<span id="L89" class="ln">    89  </span>	switch config.Network {
-<span id="L90" class="ln">    90  </span>	case &#34;udp4&#34;:
-<span id="L91" class="ln">    91  </span>		localAddr = &#34;127.0.0.1:&#34; + port
-<span id="L92" class="ln">    92  </span>	case &#34;udp6&#34;:
-<span id="L93" class="ln">    93  </span>		localAddr = &#34;[::1]:&#34; + port
-<span id="L94" class="ln">    94  </span>	}
-<span id="L95" class="ln">    95  </span>	return localAddr, cancel
-<span id="L96" class="ln">    96  </span>}
-<span id="L97" class="ln">    97  </span>
+<span id="L28" class="ln">    28  </span>		if r.Question[0].Qtype == dns.TypeA {
+<span id="L29" class="ln">    29  </span>			hostname := r.Question[0].Name
+<span id="L30" class="ln">    30  </span>			for _, ip := range hostnames[hostname] {
+<span id="L31" class="ln">    31  </span>				message.Answer = append(message.Answer, &amp;dns.A{
+<span id="L32" class="ln">    32  </span>					Hdr: dns.RR_Header{Name: dom, Rrtype: dns.TypeA, Class: dns.ClassINET, Ttl: 0},
+<span id="L33" class="ln">    33  </span>					A:   net.ParseIP(ip).To4(),
+<span id="L34" class="ln">    34  </span>				})
+<span id="L35" class="ln">    35  </span>			}
+<span id="L36" class="ln">    36  </span>		}
+<span id="L37" class="ln">    37  </span>
+<span id="L38" class="ln">    38  </span>		t.Logf(&#34;DNS message:\n%s&#34;, message.String())
+<span id="L39" class="ln">    39  </span>		err := w.WriteMsg(&amp;message)
+<span id="L40" class="ln">    40  </span>		if err != nil {
+<span id="L41" class="ln">    41  </span>			t.Logf(&#34;Error writing message: %s&#34;, err.Error())
+<span id="L42" class="ln">    42  </span>		}
+<span id="L43" class="ln">    43  </span>	}
+<span id="L44" class="ln">    44  </span>}
+<span id="L45" class="ln">    45  </span>
+<span id="L46" class="ln">    46  </span><span class="comment">// DNSConfig contains options to configure a test DNS server from StartDNSServer()</span>
+<span id="L47" class="ln">    47  </span>type DNSConfig struct {
+<span id="L48" class="ln">    48  </span>	ResponseDelay time.Duration
+<span id="L49" class="ln">    49  </span>	Hostnames     map[string][]string
+<span id="L50" class="ln">    50  </span>	Port          int
+<span id="L51" class="ln">    51  </span>	Network       string <span class="comment">// e.g. udp4, udp6</span>
+<span id="L52" class="ln">    52  </span>}
+<span id="L53" class="ln">    53  </span>
+<span id="L54" class="ln">    54  </span><span class="comment">// StartDNSServer starts a DNS server with the given configuration</span>
+<span id="L55" class="ln">    55  </span>func StartDNSServer(t *testing.T, config DNSConfig) (address string, cancel context.CancelFunc) {
+<span id="L56" class="ln">    56  </span>	t.Helper()
+<span id="L57" class="ln">    57  </span>	const (
+<span id="L58" class="ln">    58  </span>		netUDP4 = &#34;udp4&#34;
+<span id="L59" class="ln">    59  </span>		netUDP6 = &#34;udp6&#34;
+<span id="L60" class="ln">    60  </span>	)
+<span id="L61" class="ln">    61  </span>	if config.Network == &#34;&#34; {
+<span id="L62" class="ln">    62  </span>		config.Network = netUDP4
+<span id="L63" class="ln">    63  </span>	}
+<span id="L64" class="ln">    64  </span>	switch config.Network {
+<span id="L65" class="ln">    65  </span>	case netUDP4, netUDP6:
+<span id="L66" class="ln">    66  </span>	default:
+<span id="L67" class="ln">    67  </span>		t.Fatal(&#34;Unsupported network for DNS:&#34;, config.Network)
+<span id="L68" class="ln">    68  </span>	}
+<span id="L69" class="ln">    69  </span>
+<span id="L70" class="ln">    70  </span>	ctx, cancel := context.WithCancel(context.Background())
+<span id="L71" class="ln">    71  </span>	mux := dns.NewServeMux()
+<span id="L72" class="ln">    72  </span>	mux.HandleFunc(&#34;local.&#34;, hostnamesHandler(ctx, t, config.ResponseDelay, config.Hostnames))
+<span id="L73" class="ln">    73  </span>
+<span id="L74" class="ln">    74  </span>	packetConn, err := net.ListenUDP(config.Network, &amp;net.UDPAddr{Port: config.Port})
+<span id="L75" class="ln">    75  </span>	require.NoError(t, err)
+<span id="L76" class="ln">    76  </span>	server := &amp;dns.Server{
+<span id="L77" class="ln">    77  </span>		Net:        config.Network,
+<span id="L78" class="ln">    78  </span>		PacketConn: packetConn,
+<span id="L79" class="ln">    79  </span>		Handler:    mux,
+<span id="L80" class="ln">    80  </span>	}
+<span id="L81" class="ln">    81  </span>	go func() {
+<span id="L82" class="ln">    82  </span>		err := server.ActivateAndServe()
+<span id="L83" class="ln">    83  </span>		require.NoError(t, err)
+<span id="L84" class="ln">    84  </span>	}()
+<span id="L85" class="ln">    85  </span>	go func() {
+<span id="L86" class="ln">    86  </span>		&lt;-ctx.Done()
+<span id="L87" class="ln">    87  </span>		_ = server.Shutdown()
+<span id="L88" class="ln">    88  </span>	}()
+<span id="L89" class="ln">    89  </span>	localAddr := server.PacketConn.LocalAddr().String()
+<span id="L90" class="ln">    90  </span>	_, port, err := net.SplitHostPort(localAddr)
+<span id="L91" class="ln">    91  </span>	require.NoError(t, err)
+<span id="L92" class="ln">    92  </span>	switch config.Network {
+<span id="L93" class="ln">    93  </span>	case netUDP4:
+<span id="L94" class="ln">    94  </span>		localAddr = &#34;127.0.0.1:&#34; + port
+<span id="L95" class="ln">    95  </span>	case netUDP6:
+<span id="L96" class="ln">    96  </span>		localAddr = &#34;[::1]:&#34; + port
+<span id="L97" class="ln">    97  </span>	}
+<span id="L98" class="ln">    98  </span>	return localAddr, cancel
+<span id="L99" class="ln">    99  </span>}
+<span id="L100" class="ln">   100  </span>
 </pre><p></p>
 
 <div id="footer">
